--- a/src/app/Components/Public/navbar.component/navbar.component.html
+++ b/src/app/Components/Public/navbar.component/navbar.component.html
@@ -1,31 +1,75 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/quizzes">QuizApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" routerLink="/">QuizMaster</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/quizzes" routerLinkActive="active">Quizzes</a>
+          <a
+            class="nav-link"
+            routerLink="/quizzes"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Home</a
+          >
         </li>
+
         <ng-container *ngIf="authService.isLoggedIn()">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/my-attempts" routerLinkActive="active">My Attempts</a>
+            <a
+              class="nav-link"
+              routerLink="/my-attempts"
+              routerLinkActive="active"
+              >My Attempts</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/quiz/create" routerLinkActive="active">Create Quiz</a>
+            <a
+              class="nav-link"
+              routerLink="/quiz/create"
+              routerLinkActive="active"
+              >Create Quiz</a
+            >
           </li>
         </ng-container>
       </ul>
-      <div class="d-flex">
+
+      <div class="d-flex align-items-center">
         <ng-container *ngIf="!authService.isLoggedIn()">
-          <a routerLink="/login" class="btn btn-outline-light me-2">Login</a>
-          <a routerLink="/register" class="btn btn-primary">Register</a>
+          <a routerLink="/login" class="btn btn-outline-primary me-2">Login</a>
+          <a routerLink="/register" class="btn btn-primary">Sign Up</a>
         </ng-container>
+
         <ng-container *ngIf="authService.isLoggedIn()">
-          <span class="navbar-text me-2">Hi, {{ currentUser?.username }}</span>
-          <button (click)="logout()" class="btn btn-outline-light">Logout</button>
+          <div class="dropdown">
+            <button
+              class="btn btn-primary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i class="bi bi-person-circle me-1"></i>
+              {{ currentUser?.username }}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
+              <li>
+                <button (click)="logout()" class="dropdown-item text-danger">
+                  <i class="bi bi-box-arrow-right me-2"></i>Logout
+                </button>
+              </li>
+            </ul>
+          </div>
         </ng-container>
       </div>
     </div>
